# NN

./: .gitignore  CMakeLists.txt  README.md  download.py  main.cpp  run.sh  show.py
Network/: BP.cpp  BP.h
common/: Activation.h
include/: base.h
log/: BP_Demo.INFO  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182126.56449  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182600.56738  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182735.56815  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182804.56860  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182908.56919  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182927.56951  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-182936.56952  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183027.57011  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183606.57161  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183647.57208  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183705.57246  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183722.57276  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183804.57311  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183816.57315  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183822.57316  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-183830.57317  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-184158.57344  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-184202.57348  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-184209.57349  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-184226.57361  BP_Demo.huangchnuodeMBP.nacn.log.INFO.20210309-184235.57370  (+20 more)
math/: Matrix.cpp  Matrix.h  Matrix.hpp
(+9 files in other folders)
